Feat: Add Lotus Bio Shop to English map

--- a/en/map.html
+++ b/en/map.html
@@ -293,6 +293,74 @@
                         </tr>
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
+                            <a href="https://www.copytoprint.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                              Copy To Print
+                              <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                              </svg>
+                            </a>
+                          </td>
+                          <td class="py-3 px-4 text-gray-600">Printing service</td>
+                          <td class="py-3 px-4 text-gray-600">Graaf Adolfstraat 36-C</td>
+                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                        </tr>
+                      <tr class="border-b border-gray-100 hover:bg-gray-50">
+                          <td class="py-3 px-4 font-medium">
+                            <a href="https://ijssaloneatalia.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                              IJssalon Eatalia
+                              <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                              </svg>
+                            </a>
+                          </td>
+                          <td class="py-3 px-4 text-gray-600">Ice cream shop</td>
+                          <td class="py-3 px-4 text-gray-600">Leeuwarderweg 1</td>
+                          <td class="py-3 px-4 text-gray-600">Sneek</td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                        </tr>
+                      <tr class="border-b border-gray-100 hover:bg-gray-50">
+                          <td class="py-3 px-4 font-medium">
                             <a href="https://instagram.com/e.m_enjoy/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                             E.M Enjoy
                           </td>
@@ -605,6 +673,40 @@
                           <td class="py-3 px-4 text-gray-600">Bakery</td>
                           <td class="py-3 px-4 text-gray-600">Laagduurswoude 22</td>
                           <td class="py-3 px-4 text-gray-600">Makkinga</td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                        </tr>
+                      <tr class="border-b border-gray-100 hover:bg-gray-50">
+                          <td class="py-3 px-4 font-medium">
+                            <a href="https://www.lotusbioshop.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                              Lotus Bio Shop
+                              <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                              </svg>
+                            </a>
+                          </td>
+                          <td class="py-3 px-4 text-gray-600">Natural foods shop</td>
+                          <td class="py-3 px-4 text-gray-600">Singel 5</td>
+                          <td class="py-3 px-4 text-gray-600">Sneek</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
