--- a/en/map.html
+++ b/en/map.html
@@ -176,7 +176,7 @@
                 
                 <div class="overflow-x-auto">
                   <table id="businessTable" class="w-full border-collapse">
-                    <caption class="text-sm text-gray-500 mb-4">Last updated: 5 october 2025</caption>
+                    <caption class="text-sm text-gray-500 mb-4">Last updated: 7 october 2025</caption>
                     <thead>
                       <tr class="border-b border-gray-200">
                         <th class="text-left py-3 px-4 font-medium text-gray-900">Business</th>
@@ -807,8 +807,8 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Snack bar</td>
-                          <td class="py-3 px-4 text-gray-600">Molenplein 10b</td>
+                          <td class="py-3 px-4 text-gray-600">Snackbar</td>
+                          <td class="py-3 px-4 text-gray-600">Molenplein 10-B</td>
                           <td class="py-3 px-4 text-gray-600">Heerenveen</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
