--- a/fy/map.html
+++ b/fy/map.html
@@ -176,7 +176,7 @@
                 
                 <div class="overflow-x-auto">
                   <table id="businessTable" class="w-full border-collapse">
-                    <caption class="text-sm text-gray-500 mb-4">Lêst bywurke: 5 oktober 2025</caption>
+                    <caption class="text-sm text-gray-500 mb-4">Lêst bywurke: 7 oktober 2025</caption>
                     <thead>
                       <tr class="border-b border-gray-200">
                         <th class="text-left py-3 px-4 font-medium text-gray-900">Bedriuw</th>
@@ -806,9 +806,9 @@
                               </svg>
                             </a>
                           </td>
-                          <td class="py-3 px-4 text-gray-600">Cafeteria</td>
-                          <td class="py-3 px-4 text-gray-600">Molenplein 10b</td>
-                          <td class="py-3 px-4 text-gray-600">Hearlân</td>
+                          <td class="py-3 px-4 text-gray-600">Snackbar</td>
+                          <td class="py-3 px-4 text-gray-600">Molenplein 10-B</td>
+                          <td class="py-3 px-4 text-gray-600">It Hearrenfean</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
                               <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
