--- a/en/map.html
+++ b/en/map.html
@@ -527,6 +527,40 @@
                         </tr>
                       <tr class="border-b border-gray-100 hover:bg-gray-50">
                           <td class="py-3 px-4 font-medium">
+                            <a href="https://www.vliegclub-fryslan.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
+                              Vliegclub Fryslân
+                              <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                              </svg>
+                            </a>
+                          </td>
+                          <td class="py-3 px-4 text-gray-600">Aviation academy</td>
+                          <td class="py-3 px-4 text-gray-600">De Knobben 110-A</td>
+                          <td class="py-3 px-4 text-gray-600">Drachten</td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                          <td class="py-3 px-4 text-center">
+                            <div class="flex justify-center">
+                              <svg class="h-5 w-5 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                              </svg>
+                            </div>
+                          </td>
+                        </tr>
+                      <tr class="border-b border-gray-100 hover:bg-gray-50">
+                          <td class="py-3 px-4 font-medium">
                             <a href="https://eelcogriep.nl/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline flex items-center">
                               Eelco Griep
                               <svg class="ml-1 h-3 w-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
