--- a/nl/map.html
+++ b/nl/map.html
@@ -671,7 +671,7 @@
                             </a>
                           </td>
                           <td class="py-3 px-4 text-gray-600">Viswinkel</td>
-                          <td class="py-3 px-4 text-gray-600">Waddenpromenade 3-2</td>
+                          <td class="py-3 px-4 text-gray-600">Waddenpromenade 3</td>
                           <td class="py-3 px-4 text-gray-600">Harlingen</td>
                           <td class="py-3 px-4 text-center">
                             <div class="flex justify-center">
