Add responsive srcset for Feb 19 meetup images

--- a/en/meetings.html
+++ b/en/meetings.html
@@ -130,8 +130,27 @@
     <div class="max-w-md mx-auto rounded-2xl border-0 shadow-lg transition-all duration-300 hover:shadow-xl bg-white">
       <div class="overflow-hidden rounded-t-2xl">
         <picture>
-          <source srcset="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-large.webp" type="image/webp">
-          <img alt="Bitcoin Friesland Meetup at ByOak" class="w-full h-auto" src="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-large.png" width="640" height="427">
+          <source
+            srcset="
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-small.webp 320w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-medium.webp 480w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-large.webp 640w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-960.webp 960w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-1280.webp 1280w"
+            sizes="(min-width:1024px) 33vw, (min-width:768px) 50vw, 100vw"
+            type="image/webp">
+          <img
+            alt="Bitcoin Friesland Meetup at ByOak"
+            class="w-full h-auto"
+            src="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-large.png"
+            srcset="
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-small.png 320w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-medium.png 480w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-large.png 640w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-960.png 960w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-1280.png 1280w"
+            sizes="(min-width:1024px) 33vw, (min-width:768px) 50vw, 100vw"
+            width="640" height="427">
         </picture>
       </div>
       <div class="bg-gradient-to-r from-friesland-blue/10 via-bitcoin-orange/15 to-friesland-blue/10 px-6 py-4">
