Switch meetup fallbacks to JPEG width-based set

--- a/nl/meetings.html
+++ b/nl/meetings.html
@@ -142,13 +142,13 @@
           <img
             alt="Bitcoin Friesland Meetup bij ByOak"
             class="w-full h-auto"
-            src="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.png"
+            src="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.jpg"
             srcset="
-              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-320.png 320w,
-              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-480.png 480w,
-              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.png 640w,
-              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-960.png 960w,
-              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-1280.png 1280w"
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-320.jpg 320w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-480.jpg 480w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.jpg 640w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-960.jpg 960w,
+              ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-1280.jpg 1280w"
             sizes="(min-width:1024px) 33vw, (min-width:768px) 50vw, 100vw"
             width="640" height="427">
         </picture>
