Fix meetings grid card structure; remove unused placeholder assets

--- a/nl/meetings.html
+++ b/nl/meetings.html
@@ -243,7 +243,8 @@
         </a>
       </div>
     </div>
-      
+
+    <div class="max-w-md mx-auto rounded-2xl border-0 shadow-lg transition-all duration-300 hover:shadow-xl opacity-70 bg-white">
       <div class="overflow-hidden rounded-t-2xl">
         <picture>
           <source srcset="../assets/images/bitcoin-meeting-heerenveen-compressed.webp" type="image/webp">
@@ -709,6 +710,7 @@
           </a>
         </div>
       </div>
+    </div>
     </div>
                 </div>
               </div>
