--- a/nl/index.html
+++ b/nl/index.html
@@ -361,7 +361,24 @@
               <div class="text-xs text-gray-600 font-medium">Gemeenschap</div>
             </div>
             <div class="p-6 pt-3 flex flex-col flex-grow">
-              <img src="../assets/images/placeholder.svg" width="300" height="200" alt="Bijeenkomsten en Meetups" class="w-full h-32 object-cover rounded-lg mb-4" onerror="this.style.display='none'">
+              <picture>
+                <source
+                  srcset="
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-320.webp 320w,
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-480.webp 480w,
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.webp 640w"
+                  sizes="(min-width:1024px) 33vw, (min-width:768px) 50vw, 100vw"
+                  type="image/webp">
+                <img
+                  src="../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.jpg"
+                  srcset="
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-320.jpg 320w,
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-480.jpg 480w,
+                    ../assets/images/bitcoin-friesland-meetup-feb-19-2026-by-oak-640.jpg 640w"
+                  sizes="(min-width:1024px) 33vw, (min-width:768px) 50vw, 100vw"
+                  width="640" height="427" alt="Bijeenkomsten en Meetups"
+                  class="w-full h-32 object-cover rounded-lg mb-4">
+              </picture>
               <p class="text-gray-700 mb-4 text-left flex-grow">Overzicht van alle Bitcoin meetups</p>
               <a href="meetings.html" class="w-full flex items-center justify-center border border-blue-500 text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors">
                 Bezoek <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
